[tool.poetry]
name = "indeed scrape"
version = "0.1.0"
description = "Indeed Job Scraper"
authors = ["Anne Oluwole <aoluwole7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
pandas = "^1.3.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
